[package]
name = "use-with"
version = "0.2.0"
description = "Provides resource management utilities inspired by Kotlin's 'use' function and C#'s 'using' block, ensuring proper utilization and disposal of resources in Rust."
authors = ["Markus Mayer <widemeadows@gmail.com>"]
keywords = ["resource-mangement", "using", "dispose-pattern"]
categories = ["memory-management"]
license = "MIT"
repository = "https://github.com/sunsided/use-with"
homepage = "https://github.com/sunsided/use-with"
edition = "2021"
rust-version = "1.75.0"

[dev-dependencies]
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
